Refactor code structure for improved readability and maintainability

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,7 @@
 [env:cyd]
 platform = espressif32
 board = esp32dev
+board_build.partitions = huge_app.csv
 framework = arduino
 monitor_speed = 115200
 board_build.filesystem = littlefs
